	  MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs,
	  MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs,
	  MonoDevelop.Ide.mdp, gtk-gui/objects.xml: Updated.
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: Don't crash MD if there is
	  an exception in the go to dialog.
	* MonoDevelop.Ide.Gui/Document.cs: Request file edit permission when
	  saving a document.

2008-07-28  Andrés G. Aragoneses <aaragoneses@novell.com> 

	* MonoDevelop.Ide.Gui.Search/CurrentProjectDocumentIterator.cs: Be more
	  stacktrace friendly (wrt to exception line number).

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/SmartIndenter.cs: Missed a file. It's not
	  used yet, but my local copy of DocumentStateTracker has code
	  stubbed using the Indent type from this file, and I've accidentally
	  committed it twice already. Hopefully by committing this I can
	  avoid breaking the build again...
	* MonoDevelop.Ide.mdp, Makefile.am: Updated.
	* MonoDevelop.Ide.Gui.Pads.ClassBrowser/ClassBrowserPadWidget.cs: Avoid
	  unnecessary empty string instantiations.

2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/DocumentStateTracker.cs: Make consumers
	  supply the initial parser object.

2008-07-21  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ClassBrowser/ClassBrowserPadWidget.cs:
	Ugh, use System.EventArgs in the delegate - current mono svn seems
	to break on this :(

	* MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs (Dispose): Override
	Gtk.Object.Dispose().

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/RootWorkspace.cs,
	  MonoDevelop.Ide.Gui/WorkbenchMemento.cs: Moved serialization engine
	  to MonoDevelop.Core. Use new syntax for specifying attribute scope.

2008-07-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Remove test
	  catchpoint.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 
